--- a/Contact.css
+++ b/Contact.css
@@ -1,48 +1,236 @@
+ .u-section-1 {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-image: url("images/contactusbackground.jpg");
+  background-size: cover;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 1109px;
+  min-height: 249px;
 }
 
 .u-section-1 .u-text-1 {
+  font-weight: 700;
+  font-size: 3.75rem;
+  margin: 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 232px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+  }
+} .u-section-2 {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-image: url("images/contactusbackground.jpg");
+  background-size: cover;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 249px;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  font-size: 3.75rem;
+  margin: 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 232px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-text-1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    font-size: 2.25rem;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 448px;
+}
+
+.u-section-3 .u-text-1 {
   font-size: 2.75rem;
   font-weight: 700;
-  margin: 95px auto 0;
+  margin: 64px auto 0;
 }
 
-.u-section-1 .u-text-2 {
+.u-section-3 .u-text-2 {
   font-size: 1.25rem;
-  margin: 13px auto 0;
+  width: 807px;
+  margin: 33px auto 0;
 }
 
-.u-section-1 .u-group-1 {
+.u-section-3 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0px;
+  transition-duration: 0.2s;
+  margin: 79px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-text-1 {
+    font-size: 2.25rem;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 1rem;
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 340px;
+  }
+}
+
+.u-section-3 .u-btn-1,
+.u-section-3 .u-btn-1:before,
+.u-section-3 .u-btn-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}.u-section-4 .u-sheet-1 {
+  min-height: 448px;
+}
+
+.u-section-4 .u-text-1 {
+  font-size: 2.75rem;
+  font-weight: 700;
+  margin: 60px auto 0;
+}
+
+.u-section-4 .u-text-2 {
+  font-size: 1.25rem;
+  width: 807px;
+  margin: 33px auto 0;
+}
+
+.u-section-4 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0px;
+  transition-duration: 0.2s;
+  margin: 94px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    font-size: 2.25rem;
+  }
+
+  .u-section-4 .u-text-2 {
+    font-size: 1rem;
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 483px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-4 .u-text-2 {
+    width: 340px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 60px;
+  }
+}
+
+.u-section-4 .u-btn-1,
+.u-section-4 .u-btn-1:before,
+.u-section-4 .u-btn-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}.u-section-5 .u-sheet-1 {
+  min-height: 806px;
+}
+
+.u-section-5 .u-text-1 {
+  font-size: 2.75rem;
+  font-weight: 700;
+  width: 173px;
+  margin: 55px auto 0;
+}
+
+.u-section-5 .u-text-2 {
+  font-size: 1.25rem;
+  width: 470px;
+  margin: 12px auto 0;
+}
+
+.u-section-5 .u-group-1 {
   min-height: 520px;
   width: 593px;
   height: auto;
   margin: 12px auto 60px;
 }
 
-.u-section-1 .u-container-layout-1 {
+.u-section-5 .u-container-layout-1 {
   padding: 27px 30px 30px;
 }
 
-.u-section-1 .u-form-1 {
+.u-section-5 .u-form-1 {
   height: 472px;
   margin-top: 1px;
   margin-bottom: 0;
 }
 
-.u-section-1 .u-label-1 {
+.u-section-5 .u-label-1 {
   font-weight: 700;
 }
 
-.u-section-1 .u-label-2 {
+.u-section-5 .u-label-2 {
   font-weight: 700;
 }
 
-.u-section-1 .u-label-3 {
+.u-section-5 .u-label-3 {
   font-weight: 700;
 }
 
-.u-section-1 .u-btn-1 {
+.u-section-5 .u-btn-1 {
   border-style: solid;
   letter-spacing: 0px;
   background-image: none;
@@ -55,75 +243,83 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-group-1 {
+  .u-section-5 .u-group-1 {
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 50vw;
-  }
-
-  .u-section-1 .u-group-1 {
-    margin-bottom: 48px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-group-1 {
+  .u-section-5 .u-text-1 {
+    font-size: 2.25rem;
+  }
+
+  .u-section-5 .u-text-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-5 .u-group-1 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-text-1 {
+  .u-section-5 .u-text-1 {
     font-size: 1.875rem;
   }
 
-  .u-section-1 .u-group-1 {
+  .u-section-5 .u-text-2 {
+    width: 363px;
+  }
+
+  .u-section-5 .u-group-1 {
     width: 340px;
   }
-} .u-section-2 {
+} .u-section-6 {
   background-image: none;
   min-height: 457px;
 }
 
-.u-section-2 .u-group-1 {
+.u-section-6 .u-group-1 {
   min-height: 174px;
   height: auto;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-6 .u-container-layout-1 {
   padding-left: 0;
   padding-right: 0;
 }
 
-.u-section-2 .u-list-1 {
+.u-section-6 .u-list-1 {
   width: 811px;
   margin: -87px auto 60px;
 }
 
-.u-section-2 .u-repeater-1 {
+.u-section-6 .u-repeater-1 {
   grid-template-columns: repeat(2, 50%);
   min-height: 280px;
   grid-auto-columns: 50%;
   grid-gap: 0px;
 }
 
-.u-section-2 .u-list-item-1 {
+.u-section-6 .u-list-item-1 {
   background-image: none;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-2 .u-container-layout-2 {
+.u-section-6 .u-container-layout-2 {
   padding: 0 19px 60px;
 }
 
-.u-section-2 .u-icon-1 {
+.u-section-6 .u-icon-1 {
   width: 123px;
   height: 123px;
   background-image: none;
@@ -132,7 +328,7 @@
   padding: 31px;
 }
 
-.u-section-2 .u-text-1 {
+.u-section-6 .u-text-1 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -140,28 +336,28 @@
   margin: 35px 11px 0;
 }
 
-.u-section-2 .u-text-2 {
+.u-section-6 .u-text-2 {
   font-size: 1.125rem;
   line-height: 1.3;
   margin: 22px 0 0;
 }
 
-.u-section-2 .u-btn-1 {
+.u-section-6 .u-btn-1 {
   background-image: none;
   padding: 0;
 }
 
-.u-section-2 .u-list-item-2 {
+.u-section-6 .u-list-item-2 {
   background-image: none;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-2 .u-container-layout-3 {
+.u-section-6 .u-container-layout-3 {
   padding: 0 19px 60px;
 }
 
-.u-section-2 .u-icon-2 {
+.u-section-6 .u-icon-2 {
   width: 123px;
   height: 123px;
   background-image: none;
@@ -170,7 +366,7 @@
   padding: 31px;
 }
 
-.u-section-2 .u-text-3 {
+.u-section-6 .u-text-3 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -178,223 +374,223 @@
   margin: 35px 11px 0;
 }
 
-.u-section-2 .u-text-4 {
+.u-section-6 .u-text-4 {
   font-size: 1.125rem;
   line-height: 1.3;
   margin: 22px 0 0;
 }
 
-.u-section-2 .u-btn-2 {
+.u-section-6 .u-btn-2 {
   background-image: none;
   text-decoration: underline !important;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-group-1 {
+  .u-section-6 .u-group-1 {
     height: auto;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-top: 80px;
     padding-bottom: 0;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 50px;
   }
 
-  .u-section-2 .u-text-1 {
+  .u-section-6 .u-text-1 {
     font-size: 1.25rem;
   }
 
-  .u-section-2 .u-text-2 {
+  .u-section-6 .u-text-2 {
     font-size: 1rem;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-6 .u-container-layout-3 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 50px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-6 .u-text-3 {
     font-size: 1.25rem;
   }
 
-  .u-section-2 .u-text-4 {
+  .u-section-6 .u-text-4 {
     font-size: 1rem;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-2 {
+   .u-section-6 {
     min-height: 1081px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-top: 75px;
   }
 
-  .u-section-2 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 720px;
   }
 
-  .u-section-2 .u-repeater-1 {
+  .u-section-6 .u-repeater-1 {
     grid-template-columns: 100%;
     grid-auto-columns: 100%;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-text-1 {
+  .u-section-6 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-6 .u-container-layout-3 {
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-6 .u-text-3 {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-2 {
+   .u-section-6 {
     min-height: 1529px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-top: 70px;
   }
 
-  .u-section-2 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 540px;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 90px;
   }
 
-  .u-section-2 .u-text-1 {
+  .u-section-6 .u-text-1 {
     font-size: 1.5rem;
   }
 
-  .u-section-2 .u-text-2 {
+  .u-section-6 .u-text-2 {
     font-size: 1.25rem;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-6 .u-container-layout-3 {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 90px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-6 .u-text-3 {
     font-size: 1.5rem;
   }
 
-  .u-section-2 .u-text-4 {
+  .u-section-6 .u-text-4 {
     font-size: 1.25rem;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-group-1 {
+  .u-section-6 .u-group-1 {
     min-height: 663px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-top: 65px;
   }
 
-  .u-section-2 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 340px;
     margin-top: -83px;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 70px;
   }
 
-  .u-section-2 .u-icon-1 {
+  .u-section-6 .u-icon-1 {
     width: 108px;
     height: 108px;
     margin-top: -31px;
     padding: 27px;
   }
 
-  .u-section-2 .u-text-1 {
+  .u-section-6 .u-text-1 {
     margin-top: 30px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-6 .u-container-layout-3 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 70px;
   }
 
-  .u-section-2 .u-icon-2 {
+  .u-section-6 .u-icon-2 {
     width: 108px;
     height: 108px;
     margin-top: -31px;
     padding: 27px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-6 .u-text-3 {
     margin-top: 30px;
   }
-} .u-section-3 {
+} .u-section-7 {
   background-image: none;
   min-height: 457px;
 }
 
-.u-section-3 .u-group-1 {
+.u-section-7 .u-group-1 {
   min-height: 174px;
   height: auto;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-3 .u-container-layout-1 {
+.u-section-7 .u-container-layout-1 {
   padding-left: 0;
   padding-right: 0;
 }
 
-.u-section-3 .u-list-1 {
+.u-section-7 .u-list-1 {
   width: 811px;
   margin: -87px auto 60px;
 }
 
-.u-section-3 .u-repeater-1 {
+.u-section-7 .u-repeater-1 {
   grid-template-columns: repeat(2, 50%);
   min-height: 280px;
   grid-auto-columns: 50%;
   grid-gap: 0px;
 }
 
-.u-section-3 .u-list-item-1 {
+.u-section-7 .u-list-item-1 {
   background-image: none;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-3 .u-container-layout-2 {
+.u-section-7 .u-container-layout-2 {
   padding: 0 19px 60px;
 }
 
-.u-section-3 .u-icon-1 {
+.u-section-7 .u-icon-1 {
   width: 123px;
   height: 123px;
   background-image: none;
@@ -403,7 +599,7 @@
   padding: 31px;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-7 .u-text-1 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -411,28 +607,28 @@
   margin: 35px 11px 0;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-7 .u-text-2 {
   font-size: 1.125rem;
   line-height: 1.3;
   margin: 22px 0 0;
 }
 
-.u-section-3 .u-btn-1 {
+.u-section-7 .u-btn-1 {
   background-image: none;
   padding: 0;
 }
 
-.u-section-3 .u-list-item-2 {
+.u-section-7 .u-list-item-2 {
   background-image: none;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-3 .u-container-layout-3 {
+.u-section-7 .u-container-layout-3 {
   padding: 0 19px 60px;
 }
 
-.u-section-3 .u-icon-2 {
+.u-section-7 .u-icon-2 {
   width: 123px;
   height: 123px;
   background-image: none;
@@ -441,7 +637,7 @@
   padding: 31px;
 }
 
-.u-section-3 .u-text-3 {
+.u-section-7 .u-text-3 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -449,206 +645,206 @@
   margin: 35px 11px 0;
 }
 
-.u-section-3 .u-text-4 {
+.u-section-7 .u-text-4 {
   font-size: 1.125rem;
   line-height: 1.3;
   margin: 22px 0 0;
 }
 
-.u-section-3 .u-btn-2 {
+.u-section-7 .u-btn-2 {
   background-image: none;
   text-decoration: underline !important;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-group-1 {
+  .u-section-7 .u-group-1 {
     height: auto;
   }
 
-  .u-section-3 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-top: 80px;
     padding-bottom: 0;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-7 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 50px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 1.25rem;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-7 .u-text-2 {
     font-size: 1rem;
   }
 
-  .u-section-3 .u-container-layout-3 {
+  .u-section-7 .u-container-layout-3 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 50px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-7 .u-text-3 {
     font-size: 1.25rem;
   }
 
-  .u-section-3 .u-text-4 {
+  .u-section-7 .u-text-4 {
     font-size: 1rem;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-3 {
+   .u-section-7 {
     min-height: 513px;
   }
 
-  .u-section-3 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-top: 75px;
   }
 
-  .u-section-3 .u-list-1 {
+  .u-section-7 .u-list-1 {
     width: 720px;
     margin-bottom: 0;
   }
 
-  .u-section-3 .u-repeater-1 {
+  .u-section-7 .u-repeater-1 {
     grid-template-columns: 100%;
     min-height: 426px;
     grid-auto-columns: 100%;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-7 .u-container-layout-2 {
     padding-bottom: 30px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-7 .u-text-1 {
     width: auto;
     margin-top: 14px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-7 .u-text-2 {
     width: auto;
     margin-top: 14px;
   }
 
-  .u-section-3 .u-container-layout-3 {
+  .u-section-7 .u-container-layout-3 {
     padding-bottom: 30px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-7 .u-text-3 {
     width: auto;
     margin-top: 14px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-3 .u-text-4 {
+  .u-section-7 .u-text-4 {
     width: auto;
     margin-top: 14px;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-3 {
+   .u-section-7 {
     min-height: 595px;
   }
 
-  .u-section-3 .u-group-1 {
+  .u-section-7 .u-group-1 {
     margin-top: 1px;
   }
 
-  .u-section-3 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-top: 70px;
   }
 
-  .u-section-3 .u-list-1 {
+  .u-section-7 .u-list-1 {
     width: 540px;
     margin-bottom: 1px;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-7 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 90px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 1.5rem;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-7 .u-text-2 {
     font-size: 1.25rem;
   }
 
-  .u-section-3 .u-container-layout-3 {
+  .u-section-7 .u-container-layout-3 {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 90px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-7 .u-text-3 {
     font-size: 1.5rem;
   }
 
-  .u-section-3 .u-text-4 {
+  .u-section-7 .u-text-4 {
     font-size: 1.25rem;
   }
 }
 
 @media (max-width: 575px) {
-   .u-section-3 {
+   .u-section-7 {
     min-height: 570px;
   }
 
-  .u-section-3 .u-group-1 {
+  .u-section-7 .u-group-1 {
     min-height: 159px;
   }
 
-  .u-section-3 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-top: 30px;
   }
 
-  .u-section-3 .u-list-1 {
+  .u-section-7 .u-list-1 {
     width: 340px;
     margin-top: -83px;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-7 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 70px;
   }
 
-  .u-section-3 .u-icon-1 {
+  .u-section-7 .u-icon-1 {
     width: 108px;
     height: 108px;
     margin-top: -31px;
     padding: 27px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-7 .u-text-1 {
     margin-top: 30px;
   }
 
-  .u-section-3 .u-container-layout-3 {
+  .u-section-7 .u-container-layout-3 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 70px;
   }
 
-  .u-section-3 .u-icon-2 {
+  .u-section-7 .u-icon-2 {
     width: 108px;
     height: 108px;
     margin-top: -31px;
     padding: 27px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-7 .u-text-3 {
     margin-top: 30px;
   }
 }
