--- a/index.css
+++ b/index.css
@@ -3,11 +3,11 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 585px;
+  min-height: 497px;
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 2.25rem;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: 1px;
@@ -37,7 +37,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 482px;
+    min-height: 410px;
   }
 
   .u-section-1 .u-text-1 {
@@ -51,7 +51,7 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 2.25rem;
+    font-size: 3rem;
     margin-left: 2px;
     margin-right: 2px;
   }
@@ -134,6 +134,7 @@
 .u-section-2 .u-text-1 {
   font-size: 2.25rem;
   font-weight: 700;
+  width: 197px;
   margin: 111px auto 0;
 }
 
@@ -162,6 +163,10 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-text-1 {
+    font-size: 1rem;
+  }
+
   .u-section-2 .u-text-2 {
     font-size: 1rem;
     width: 540px;
@@ -169,6 +174,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
   .u-section-2 .u-text-2 {
     width: 340px;
   }
@@ -178,15 +187,123 @@
 .u-section-2 .u-btn-1:before,
 .u-section-2 .u-btn-1 > .u-container-layout:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-} .u-section-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 454px;
+}.u-section-3 .u-sheet-1 {
+  min-height: 479px;
+  margin-bottom: 0;
 }
 
 .u-section-3 .u-text-1 {
+  font-size: 2.25rem;
+  font-weight: 700;
+  width: 246px;
+  margin: 24px auto 0;
+}
+
+.u-section-3 .u-image-1 {
+  width: 318px;
+  height: 247px;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  animation-timing-function: linear;
+  margin: 62px auto 0 -496px;
+}
+
+.u-section-3 .u-image-2 {
+  width: 82px;
+  height: 101px;
+  animation-timing-function: linear;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: -174px auto 0 -368px;
+}
+
+.u-section-3 .u-image-3 {
+  width: 360px;
+  height: 48px;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  animation-timing-function: linear;
+  margin: -74px auto 0 -507px;
+}
+
+.u-section-3 .u-image-4 {
+  width: 169px;
+  height: 169px;
+  animation-timing-function: linear;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: -108px auto 0 -421px;
+}
+
+.u-section-3 .u-image-5 {
+  width: 318px;
+  height: 134px;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  animation-timing-function: linear;
+  margin: -152px auto 0 -496px;
+}
+
+.u-section-3 .u-image-6 {
+  width: 273px;
+  height: 107px;
+  --animation-custom_in-translate_x: 2100px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 1;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  animation-timing-function: linear;
+  margin: -120px auto 60px -473px;
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-text-1 {
+    font-size: 1rem;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 612px;
+}
+
+.u-section-4 .u-text-1 {
+  font-size: 2.25rem;
+  font-weight: 700;
+  margin: 27px auto 60px;
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-text-1 {
+    font-size: 1.5rem;
+  }
+} .u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 454px;
+}
+
+.u-section-5 .u-text-1 {
   line-height: 1.2;
   letter-spacing: 1px;
   font-weight: 700;
@@ -195,73 +312,73 @@
   margin: 41px auto 0;
 }
 
-.u-section-3 .u-list-1 {
+.u-section-5 .u-list-1 {
   grid-template-rows: repeat(1, auto);
   width: 780px;
   margin: 48px auto 37px;
 }
 
-.u-section-3 .u-repeater-1 {
+.u-section-5 .u-repeater-1 {
   grid-auto-columns: calc(50% - 26px);
   grid-template-columns: repeat(2, calc(50% - 26px));
   min-height: 284px;
   grid-gap: 52px;
 }
 
-.u-section-3 .u-list-item-1 {
+.u-section-5 .u-list-item-1 {
   background-image: none;
 }
 
-.u-section-3 .u-container-layout-1 {
+.u-section-5 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-3 .u-icon-1 {
+.u-section-5 .u-icon-1 {
   height: 64px;
   width: 64px;
   margin: 0 auto;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-5 .u-text-2 {
   font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
-.u-section-3 .u-text-3 {
+.u-section-5 .u-text-3 {
   font-size: 1rem;
   margin: 20px 0 0;
 }
 
-.u-section-3 .u-list-item-2 {
+.u-section-5 .u-list-item-2 {
   background-image: none;
 }
 
-.u-section-3 .u-container-layout-2 {
+.u-section-5 .u-container-layout-2 {
   padding: 30px;
 }
 
-.u-section-3 .u-icon-2 {
+.u-section-5 .u-icon-2 {
   height: 64px;
   width: 64px;
   margin: 0 auto;
 }
 
-.u-section-3 .u-text-4 {
+.u-section-5 .u-text-4 {
   font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
-.u-section-3 .u-text-5 {
+.u-section-5 .u-text-5 {
   font-size: 1rem;
   margin: 20px 0 0;
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-list-1 {
+  .u-section-5 .u-list-1 {
     width: 720px;
   }
 
-  .u-section-3 .u-repeater-1 {
+  .u-section-5 .u-repeater-1 {
     grid-auto-columns: calc(100% - 0px);
     grid-template-columns: 100%;
     min-height: 670px;
@@ -269,32 +386,32 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-list-1 {
+  .u-section-5 .u-list-1 {
     width: 540px;
   }
 
-  .u-section-3 .u-repeater-1 {
+  .u-section-5 .u-repeater-1 {
     grid-auto-columns: 100%;
   }
 
-  .u-section-3 .u-container-layout-1 {
+  .u-section-5 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-3 .u-container-layout-2 {
+  .u-section-5 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-text-1 {
+  .u-section-5 .u-text-1 {
     font-size: 1.875rem;
     width: 340px;
   }
 
-  .u-section-3 .u-list-1 {
+  .u-section-5 .u-list-1 {
     width: 340px;
   }
 }
@@ -303,80 +420,80 @@
 .u-block-7e65-11:not([data-block-selected]):not([data-cell-selected]):before,
 .u-block-7e65-11:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-} .u-section-4 {
+} .u-section-6 {
   background-image: none;
 }
 
-.u-section-4 .u-sheet-1 {
+.u-section-6 .u-sheet-1 {
   min-height: 594px;
 }
 
-.u-section-4 .u-list-1 {
+.u-section-6 .u-list-1 {
   grid-template-rows: repeat(1, auto);
   width: 780px;
   margin: 54px auto 0;
 }
 
-.u-section-4 .u-repeater-1 {
+.u-section-6 .u-repeater-1 {
   grid-auto-columns: calc(50% - 26px);
   grid-template-columns: repeat(2, calc(50% - 26px));
   min-height: 294px;
   grid-gap: 52px;
 }
 
-.u-section-4 .u-list-item-1 {
+.u-section-6 .u-list-item-1 {
   margin-top: 0;
   margin-bottom: 0;
   background-image: none;
 }
 
-.u-section-4 .u-container-layout-1 {
+.u-section-6 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-4 .u-icon-1 {
+.u-section-6 .u-icon-1 {
   height: 64px;
   width: 64px;
   margin: 0 auto;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-6 .u-text-1 {
   font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
-.u-section-4 .u-text-2 {
+.u-section-6 .u-text-2 {
   font-size: 1rem;
   margin: 20px 0 0;
 }
 
-.u-section-4 .u-list-item-2 {
+.u-section-6 .u-list-item-2 {
   margin-top: 0;
   margin-bottom: 0;
   background-image: none;
 }
 
-.u-section-4 .u-container-layout-2 {
+.u-section-6 .u-container-layout-2 {
   padding: 30px;
 }
 
-.u-section-4 .u-icon-2 {
+.u-section-6 .u-icon-2 {
   height: 64px;
   width: 64px;
   margin: 0 auto;
 }
 
-.u-section-4 .u-text-3 {
+.u-section-6 .u-text-3 {
   font-size: 1.25rem;
   margin: 30px auto 0;
 }
 
-.u-section-4 .u-text-4 {
+.u-section-6 .u-text-4 {
   font-size: 1rem;
   margin: 20px 0 0;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-6 .u-btn-1 {
   font-size: 1.125rem;
   border-style: solid;
   font-weight: 600;
@@ -388,17 +505,17 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-repeater-1 {
+  .u-section-6 .u-repeater-1 {
     min-height: 295px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 720px;
   }
 
-  .u-section-4 .u-repeater-1 {
+  .u-section-6 .u-repeater-1 {
     grid-auto-columns: calc(100% - 0px);
     grid-template-columns: 100%;
     min-height: 670px;
@@ -406,27 +523,27 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 540px;
   }
 
-  .u-section-4 .u-repeater-1 {
+  .u-section-6 .u-repeater-1 {
     grid-auto-columns: 100%;
   }
 
-  .u-section-4 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-4 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-list-1 {
+  .u-section-6 .u-list-1 {
     width: 340px;
   }
 }
@@ -437,15 +554,15 @@
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
 }
 
-.u-section-4 .u-btn-1,
-.u-section-4 .u-btn-1:before,
-.u-section-4 .u-btn-1 > .u-container-layout:before {
+.u-section-6 .u-btn-1,
+.u-section-6 .u-btn-1:before,
+.u-section-6 .u-btn-1 > .u-container-layout:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}.u-section-5 .u-sheet-1 {
+}.u-section-7 .u-sheet-1 {
   min-height: 533px;
 }
 
-.u-section-5 .u-text-1 {
+.u-section-7 .u-text-1 {
   line-height: 1.2;
   letter-spacing: 1px;
   font-weight: 700;
@@ -454,7 +571,7 @@
   margin: 112px auto 0;
 }
 
-.u-section-5 .u-btn-1 {
+.u-section-7 .u-btn-1 {
   font-size: 1.125rem;
   border-style: solid;
   font-weight: 600;
@@ -466,26 +583,26 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     font-size: 1.875rem;
     width: 340px;
   }
 }
 
-.u-section-5 .u-btn-1,
-.u-section-5 .u-btn-1:before,
-.u-section-5 .u-btn-1 > .u-container-layout:before {
+.u-section-7 .u-btn-1,
+.u-section-7 .u-btn-1:before,
+.u-section-7 .u-btn-1 > .u-container-layout:before {
   transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
 }
