--- a/Contact.css
+++ b/Contact.css
@@ -1,7 +1,7 @@
  .u-section-1 {
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-image: url("images/contactusbackground.jpg");
+  background-image: url("images/cityxels3.jpg");
   background-size: cover;
 }
 
