--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/cityxels3.jpg");
+  background-image: url("images/contactusbackground.jpg");
   background-position: 50% 50%;
 }
 
