--- a/Contact.css
+++ b/Contact.css
@@ -34,7 +34,7 @@
 } .u-section-2 {
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-image: url("images/contactusbackground.jpg");
+  background-image: url("images/cityxels3.jpg");
   background-size: cover;
 }
 
