--- a/Contact.css
+++ b/Contact.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-position: 50% 50%;
+  background-position: 50% 48.93%;
   background-repeat: no-repeat;
   background-image: url("images/cityxels3.jpg");
   background-size: cover;
@@ -34,7 +34,7 @@
 } .u-section-2 {
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-image: url("images/cityxels3.jpg");
+  background-image: url("images/contactusbackground.jpg");
   background-size: cover;
 }
 
